// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils getNewProjectContentAssembly should return undefined when no version present 1`] = `
"using System.Reflection;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

// General Information about an assembly is controlled through the following
// set of attributes. Change these attribute values to modify the information
// associated with an assembly.
[assembly: AssemblyTitle(\\"GamingEventPlugins\\")]
[assembly: AssemblyDescription(\\"Rust plugins for sharing events with the GamingEventAPI network\\")]
[assembly: AssemblyConfiguration(\\"\\")]
[assembly: AssemblyCompany(\\"\\")]
[assembly: AssemblyProduct(\\"GamingEventPlugins\\")]
[assembly: AssemblyCopyright(\\"Copyright ©  2018\\")]
[assembly: AssemblyTrademark(\\"\\")]
[assembly: AssemblyCulture(\\"\\")]

// Setting ComVisible to false makes the types in this assembly not visible
// to COM components.  If you need to access a type in this assembly from
// COM, set the ComVisible attribute to true on that type.
[assembly: ComVisible(false)]

// The following GUID is for the ID of the typelib if this project is exposed to COM
[assembly: Guid(\\"e3b20e54-acff-4cb1-a5ec-97eb6ab462ef\\")]

[assembly: AssemblyVersion(\\"3.2.0.1\\")]
"
`;

exports[`Utils getNewProjectContentAssembly should return version 1`] = `
"using System.Reflection;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

// General Information about an assembly is controlled through the following
// set of attributes. Change these attribute values to modify the information
// associated with an assembly.
[assembly: AssemblyTitle(\\"GamingEventPlugins\\")]
[assembly: AssemblyDescription(\\"Rust plugins for sharing events with the GamingEventAPI network\\")]
[assembly: AssemblyConfiguration(\\"\\")]
[assembly: AssemblyCompany(\\"\\")]
[assembly: AssemblyProduct(\\"GamingEventPlugins\\")]
[assembly: AssemblyCopyright(\\"Copyright ©  2018\\")]
[assembly: AssemblyTrademark(\\"\\")]
[assembly: AssemblyCulture(\\"\\")]

// Setting ComVisible to false makes the types in this assembly not visible
// to COM components.  If you need to access a type in this assembly from
// COM, set the ComVisible attribute to true on that type.
[assembly: ComVisible(false)]

// The following GUID is for the ID of the typelib if this project is exposed to COM
[assembly: Guid(\\"e3b20e54-acff-4cb1-a5ec-97eb6ab462ef\\")]

// Version information for an assembly consists of the following four values:
//
//      Major Version
//      Minor Version
//      Build Number
//      Revision
//
// You can specify all the values or you can default the Build and Revision Numbers
// by using the '*' as shown below:
// 

[assembly: AssemblyFileVersion(\\"1.0.0.0\\")]

[assembly: AssemblyVersion(\\"3.2.0.1\\")]
"
`;
